traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:19: error: illegal start of simple expression
  else if (diag < getMondeLargeur()-1); //fonctionne avec un monde carre
                                      ^TraversalDiagonal:24: error: ';' expected but 'else' found.
  else
  ^